tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@text.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/text.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-212 -182 424 364" width="424" height="364" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: normal; color: black; }
    .lini .lini-canvas { fill: white; }
    .lini .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
    .lini .lini-box { fill: white; stroke: #444; stroke-width: 2; }
    .lini .lini-link { fill: none; stroke: #989898; stroke-width: 2; stroke-dasharray: none; color: #005d56; }
    .lini .lini-link-label { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; font-size: 12px; font-weight: normal; }
    .lini .lini-cut-bg { fill: white; stroke: none; }
    .lini .lini-cut { fill: black; stroke: none; }
    .lini .lini-marker { fill: #444; stroke: none; }
  </style>
  <defs/>
  <rect class="lini-canvas" x="-212" y="-182" width="424" height="364"/>
  <g class="lini-scene">
    <text class="lini-text" x="0" y="-146" style="font-size: 20px; font-weight: bold">Styleable text, in place</text>
    <g class="lini-node lini-row lini-block" data-id="styles" transform="translate(0,-101.5)">
      <rect x="-185" y="-7.5" width="370" height="15" rx="0" ry="0"/>
      <text class="lini-text" x="-153.5" y="0">default</text>
      <text class="lini-text" x="-70" y="0" style="fill: #851618">coloured</text>
      <text class="lini-text" x="0" y="0" style="font-weight: bold">bold</text>
      <text class="lini-text" x="61" y="0" style="font-style: italic">italic</text>
      <text class="lini-text" x="144.5" y="0" style="text-decoration: underline">underline</text>
    </g>
    <g class="lini-node lini-box lini-block" data-id="a" transform="translate(0,-38.5)">
      <rect x="-42.5" y="-27.5" width="85" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Alpha</text>
    </g>
    <g class="lini-node lini-box lini-block" data-id="b" transform="translate(0,44.5)">
      <rect x="-38" y="-27.5" width="76" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Beta</text>
    </g>
    <g class="lini-node lini-box lini-block" data-id="c" transform="translate(0,127.5)">
      <rect x="-42.5" y="-27.5" width="85" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Gamma</text>
    </g>
  </g>
  <g class="lini-links">
    <g class="lini-link" data-from="a" data-to="b">
      <mask id="lini-label-cut-0" maskUnits="userSpaceOnUse" x="37" y="-40.5" width="24.5" height="79"><rect class="lini-cut-bg" x="37" y="-40.5" width="24.5" height="79"/><rect class="lini-cut" x="9.1" y="-6.55" width="100.8" height="15.6"/></mask>
      <path d="M 43.5 -38.5 L 43.5 -38.5 A 16 16 0 0 1 59.5 -22.5 L 59.5 20.5 A 16 16 0 0 1 43.5 36.5 L 42.5 36.5" mask="url(#lini-label-cut-0)"/>
      <polygon class="lini-marker lini-marker-arrow" points="38.5,36.5 47.5,32 47.5,41" style="fill: #989898"/>
      <text class="lini-link-label" x="59.5" y="1.25" style="fill: #005d56; font-weight: bold">styled by |-|</text>
    </g>
    <g class="lini-link" data-from="b" data-to="c">
      <mask id="lini-label-cut-1" maskUnits="userSpaceOnUse" x="37" y="50.5" width="24.5" height="79"><rect class="lini-cut-bg" x="37" y="50.5" width="24.5" height="79"/><rect class="lini-cut" x="1.9" y="73.95" width="115.2" height="15.6"/></mask>
      <path d="M 39 52.5 L 43.5 52.5 A 16 16 0 0 1 59.5 68.5 L 59.5 115 A 12.5 12.5 0 0 1 47 127.5 L 47 127.5" mask="url(#lini-label-cut-1)"/>
      <polygon class="lini-marker lini-marker-arrow" points="43,127.5 52,123 52,132" style="fill: #989898"/>
      <text class="lini-link-label" x="59.5" y="81.75" style="fill: #851618; font-weight: bold; text-shadow: 1px 1px 2px #484848" transform="rotate(-6 59.5 81.75)">nudged &amp; turned</text>
    </g>
  </g>
</svg>
