tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@text_decoration.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/text_decoration.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-95 -119.5 190 239" width="190" height="239" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: bold; color: black; }
    .lini .lini-box { fill: white; stroke: #444; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
  </style>
  <defs/>
  <g class="lini-scene">
    <g class="lini-node lini-box" style="text-decoration: underline" transform="translate(0,-71)">
      <rect x="-60.5" y="-27.5" width="121" height="55" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">underline</text>
    </g>
    <g class="lini-node lini-box" style="text-decoration: line-through" transform="translate(0,0)">
      <rect x="-74" y="-27.5" width="148" height="55" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">line-through</text>
    </g>
    <g class="lini-node lini-box" style="text-decoration: overline" transform="translate(0,71)">
      <rect x="-56" y="-27.5" width="112" height="55" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">overline</text>
    </g>
  </g>
  <g class="lini-wires"/>
</svg>
