tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@text_shadow.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/text_shadow.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-90.5 -128 181 256" width="181" height="256" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: bold; color: black; }
    .lini .lini-box { fill: white; stroke: #444; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
  </style>
  <defs/>
  <g class="lini-scene">
    <g class="lini-node lini-box" style="text-shadow: 1px 1px 2px gray" transform="translate(0,-79.5)">
      <rect x="-69.5" y="-27.5" width="139" height="55" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">soft shadow</text>
    </g>
    <g class="lini-node lini-box" style="text-shadow: 2px 2px 0px #ff6600" transform="translate(0,-4.5)">
      <rect x="-69.5" y="-27.5" width="139" height="55" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">hard offset</text>
    </g>
    <g class="lini-node lini-box" style="font-size: 24px; text-shadow: 0px 0px 6px crimson" transform="translate(0,75)">
      <rect x="-48.8" y="-32" width="97.6" height="64" rx="6" ry="6"/>
      <text class="lini-text" x="0" y="0">glow</text>
    </g>
  </g>
  <g class="lini-wires"/>
</svg>
