tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@text_tables.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/text_tables.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-329 -326.5 658 653" width="658" height="653" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: normal; color: black; }
    .lini .lini-canvas { fill: white; }
    .lini .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
    .lini .lini-gutter { stroke: none; }
    .lini .lini-box { fill: white; stroke: #444; stroke-width: 2; }
    .lini .lini-group { fill: rgba(0, 0, 0, 0.03); stroke: rgba(0, 0, 0, 0.4); stroke-width: 1; stroke-dasharray: 4,3; }
    .lini .lini-caption { color: rgba(0, 0, 0, 0.5); font-size: 12px; font-weight: normal; }
    .lini .lini-table { fill: none; stroke: #444; stroke-width: 2; font-size: 14px; font-weight: normal; stroke-dasharray: none; }
    .lini .lini-header { fill: rgba(0, 0, 0, 0.06); font-weight: bold; }
    .lini .lini-link { fill: none; stroke: #989898; stroke-width: 2; stroke-dasharray: none; color: #005d56; }
    .lini .lini-link-label { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; font-size: 12px; font-weight: normal; }
    .lini .lini-cut-bg { fill: white; stroke: none; }
    .lini .lini-cut { fill: black; stroke: none; }
    .lini .lini-marker { fill: #444; stroke: none; }
  </style>
  <defs/>
  <rect class="lini-canvas" x="-329" y="-326.5" width="658" height="653"/>
  <g class="lini-scene">
    <text class="lini-text" x="0" y="-290.5" style="font-size: 20px; font-weight: bold">Styleable text, in place</text>
    <g class="lini-node lini-row lini-block" data-id="styles" transform="translate(0,-246)">
      <rect x="-185" y="-7.5" width="370" height="15" rx="0" ry="0"/>
      <text class="lini-text" x="-153.5" y="0">default</text>
      <text class="lini-text" x="-70" y="0" style="fill: #851618">coloured</text>
      <text class="lini-text" x="0" y="0" style="font-weight: bold">bold</text>
      <text class="lini-text" x="61" y="0" style="font-style: italic">italic</text>
      <text class="lini-text" x="144.5" y="0" style="text-decoration: underline">underline</text>
    </g>
    <g class="lini-node lini-row lini-block" data-id="tables" transform="translate(0,-160)">
      <rect x="-302" y="-50.5" width="604" height="101" rx="0" ry="0"/>
      <g class="lini-node lini-table lini-group lini-block" data-id="invoice" transform="translate(-150,0)">
        <rect x="-151" y="-49.5" width="302" height="99" rx="8" ry="8"/>
        <rect class="lini-gutter" x="-21" y="-49.5" width="1" height="99" fill="#444"/>
        <rect class="lini-gutter" x="50" y="-49.5" width="1" height="99" fill="#444"/>
        <rect class="lini-gutter" x="-151" y="-25.5" width="302" height="1" fill="#444"/>
        <rect class="lini-gutter" x="-151" y="-0.5" width="302" height="1" fill="#444"/>
        <rect class="lini-gutter" x="-151" y="24.5" width="302" height="1" fill="#444"/>
        <g class="lini-node lini-header lini-cell lini-align-start lini-block" transform="translate(-86,-37.5)">
          <rect x="-64" y="-11" width="128" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="-40.2" y="0">Item</text>
        </g>
        <g class="lini-node lini-header lini-cell lini-block" transform="translate(15,-37.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Qty</text>
        </g>
        <g class="lini-node lini-header lini-cell lini-align-end lini-block" transform="translate(101,-37.5)">
          <rect x="-49" y="-11" width="98" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="21" y="0">Price</text>
        </g>
        <g class="lini-node lini-cell lini-align-start lini-block" transform="translate(-86,-12.5)">
          <rect x="-64" y="-11" width="128" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="-23.4" y="0">Keyboard</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(15,-12.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">2</text>
        </g>
        <g class="lini-node lini-cell lini-align-end lini-block" transform="translate(101,-12.5)">
          <rect x="-49" y="-11" width="98" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="12.6" y="0">$120.00</text>
        </g>
        <g class="lini-node lini-cell lini-align-start lini-block" transform="translate(-86,12.5)">
          <rect x="-64" y="-11" width="128" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="-27.6" y="0">Monitor</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(15,12.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">1</text>
        </g>
        <g class="lini-node lini-cell lini-align-end lini-block" transform="translate(101,12.5)">
          <rect x="-49" y="-11" width="98" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="12.6" y="0">$340.00</text>
        </g>
        <g class="lini-node lini-cell lini-align-start lini-block" transform="translate(-86,37.5)">
          <rect x="-64" y="-11" width="128" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="-19.2" y="0">USB cable</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(15,37.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">5</text>
        </g>
        <g class="lini-node lini-cell lini-align-end lini-block" transform="translate(101,37.5)">
          <rect x="-49" y="-11" width="98" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="21" y="0">$9.50</text>
        </g>
        <g class="lini-node lini-caption lini-block" transform="translate(-124.8,-60.5)">
          <rect x="-25.2" y="-6" width="50.4" height="12" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Invoice</text>
        </g>
      </g>
      <g class="lini-node lini-table lini-group lini-block" data-id="stock" transform="translate(165,0)">
        <rect x="-136" y="-49.5" width="272" height="99" rx="8" ry="8"/>
        <rect class="lini-gutter" x="-26" y="-49.5" width="1" height="99" fill="#444"/>
        <rect class="lini-gutter" x="45" y="-49.5" width="1" height="99" fill="#444"/>
        <rect class="lini-gutter" x="-136" y="-25.5" width="272" height="1" fill="#444"/>
        <rect class="lini-gutter" x="-136" y="-0.5" width="272" height="1" fill="#444"/>
        <rect class="lini-gutter" x="-136" y="24.5" width="272" height="1" fill="#444"/>
        <g class="lini-node lini-header lini-cell lini-block" transform="translate(-81,-37.5)">
          <rect x="-54" y="-11" width="108" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Item</text>
        </g>
        <g class="lini-node lini-header lini-cell lini-block" transform="translate(10,-37.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Qty</text>
        </g>
        <g class="lini-node lini-header lini-cell lini-block" transform="translate(91,-37.5)">
          <rect x="-44" y="-11" width="88" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">State</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(-81,-12.5)">
          <rect x="-54" y="-11" width="108" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Apple</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(10,-12.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">12</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(91,-12.5)">
          <rect x="-44" y="-11" width="88" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">fresh</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(-81,12.5)">
          <rect x="-54" y="-11" width="108" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Mango</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(10,12.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">3</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(91,12.5)">
          <rect x="-44" y="-11" width="88" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">ripe</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(-81,37.5)">
          <rect x="-54" y="-11" width="108" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Lime</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(10,37.5)">
          <rect x="-34" y="-11" width="68" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">0</text>
        </g>
        <g class="lini-node lini-cell lini-block" transform="translate(91,37.5)">
          <rect x="-44" y="-11" width="88" height="22" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0" style="fill: #851618; font-weight: bold">out</text>
        </g>
        <g class="lini-node lini-caption lini-block" transform="translate(-117,-60.5)">
          <rect x="-18" y="-6" width="36" height="12" rx="0" ry="0"/>
          <text class="lini-text" x="0" y="0">Stock</text>
        </g>
      </g>
    </g>
    <g class="lini-node lini-grid lini-block" data-id="cards" transform="translate(0,-15.5)">
      <rect x="-216.5" y="-66" width="433" height="132" rx="0" ry="0"/>
      <g class="lini-node lini-box lini-block" data-id="c1" transform="translate(-159.5,0)">
        <rect x="-56" y="-65" width="112" height="130" rx="8" ry="8"/>
        <text class="lini-text" x="0" y="0"><tspan x="0" y="-36">Ship the</tspan><tspan x="-4.5" dy="18">release</tspan><tspan x="0" dy="18">notes to</tspan><tspan x="-13.5" dy="18">every</tspan><tspan x="0" dy="18">customer</tspan></text>
      </g>
      <g class="lini-node lini-box lini-block" data-id="c2" transform="translate(-13.5,0)">
        <rect x="-74" y="-56" width="148" height="112" rx="8" ry="8"/>
        <text class="lini-text" x="0" y="0"><tspan x="0" y="-27">Rotate the</tspan><tspan x="0" dy="18">signing keys</tspan><tspan x="0" dy="18">before the</tspan><tspan x="0" dy="18">audit window</tspan></text>
      </g>
      <g class="lini-node lini-box lini-block" data-id="c3" transform="translate(146,0)">
        <rect x="-69.5" y="-65" width="139" height="130" rx="8" ry="8"/>
        <text class="lini-text" x="0" y="0"><tspan x="18" y="-36">Archive</tspan><tspan x="4.5" dy="18">dashboards</tspan><tspan x="4.5" dy="18">nobody has</tspan><tspan x="0" dy="18">opened this</tspan><tspan x="18" dy="18">quarter</tspan></text>
      </g>
    </g>
    <g class="lini-node lini-box lini-block" data-id="a" transform="translate(0,106)">
      <rect x="-42.5" y="-27.5" width="85" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Alpha</text>
    </g>
    <g class="lini-node lini-box lini-block" data-id="b" transform="translate(0,189)">
      <rect x="-38" y="-27.5" width="76" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Beta</text>
    </g>
    <g class="lini-node lini-box lini-block" data-id="c" transform="translate(0,272)">
      <rect x="-42.5" y="-27.5" width="85" height="55" rx="8" ry="8"/>
      <text class="lini-text" x="0" y="0">Gamma</text>
    </g>
  </g>
  <g class="lini-links">
    <g class="lini-link" data-from="a" data-to="b">
      <mask id="lini-label-cut-0" maskUnits="userSpaceOnUse" x="37" y="104" width="24.5" height="79"><rect class="lini-cut-bg" x="37" y="104" width="24.5" height="79"/><rect class="lini-cut" x="9.1" y="137.95" width="100.8" height="15.6"/></mask>
      <path d="M 43.5 106 L 43.5 106 A 16 16 0 0 1 59.5 122 L 59.5 165 A 16 16 0 0 1 43.5 181 L 42.5 181" mask="url(#lini-label-cut-0)"/>
      <polygon class="lini-marker lini-marker-arrow" points="38.5,181 47.5,176.5 47.5,185.5" style="fill: #989898"/>
      <text class="lini-link-label" x="59.5" y="145.75" style="fill: #005d56; font-weight: bold">styled by |-|</text>
    </g>
    <g class="lini-link" data-from="b" data-to="c">
      <mask id="lini-label-cut-1" maskUnits="userSpaceOnUse" x="37" y="195" width="24.5" height="79"><rect class="lini-cut-bg" x="37" y="195" width="24.5" height="79"/><rect class="lini-cut" x="1.9" y="218.45" width="115.2" height="15.6"/></mask>
      <path d="M 39 197 L 43.5 197 A 16 16 0 0 1 59.5 213 L 59.5 259.5 A 12.5 12.5 0 0 1 47 272 L 47 272" mask="url(#lini-label-cut-1)"/>
      <polygon class="lini-marker lini-marker-arrow" points="43,272 52,267.5 52,276.5" style="fill: #989898"/>
      <text class="lini-link-label" x="59.5" y="226.25" style="fill: #851618; font-weight: bold; text-shadow: 1px 1px 2px #484848" transform="rotate(-6 59.5 226.25)">nudged &amp; turned</text>
    </g>
  </g>
</svg>
